--- a/.github/workflows/duckdb-test.yml
+++ b/.github/workflows/duckdb-test.yml
@@ -9,14 +9,11 @@ jobs:
     steps:
       - name: Install DuckDB
         run: |
-          curl -L https://github.com/duckdb/duckdb/releases/download/v0.10.0/duckdb_cli-linux-amd64.zip -o duckdb.zip
-          unzip duckdb.zip
-          chmod +x duckdb
-          sudo mv duckdb /usr/local/bin/
+          curl https://install.duckdb.org | sh
       
       - name: Run Command
         run: |
-          duckdb -c "CREATE SECRET http (TYPE http, EXTRA_HTTP_HEADERS MAP {'Accept-Encoding': 'gzip'}); COPY (FROM read_csv('https://www.ine.es/jaxiT3/files/t/en/csv_bdsc/15797.csv', delim=';', ignore_errors=True, normalize_names=True, null_padding=True, parallel=True, strict_mode=False, compression='gzip')) TO 'file.parquet' (format parquet, compression 'zstd', parquet_version v2, row_group_size 1048576);"
+          /home/runner/.duckdb/cli/latest/duckdb -c "CREATE SECRET http (TYPE http, EXTRA_HTTP_HEADERS MAP {'Accept-Encoding': 'gzip'}); COPY (FROM read_csv('https://www.ine.es/jaxiT3/files/t/en/csv_bdsc/15797.csv', delim=';', ignore_errors=True, normalize_names=True, null_padding=True, parallel=True, strict_mode=False, compression='gzip')) TO 'file.parquet' (format parquet, compression 'zstd', parquet_version v2, row_group_size 1048576);"
       
       - name: Check File
         run: ls -lh file.parquet
