--- a/.github/workflows/duckdb-test.yml
+++ b/.github/workflows/duckdb-test.yml
@@ -7,13 +7,17 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Install DuckDB
-        run: |
-          curl https://install.duckdb.org | sh
-      
-      - name: Run Command
-        run: |
-          /home/runner/.duckdb/cli/latest/duckdb -c "CREATE SECRET http (TYPE http, EXTRA_HTTP_HEADERS MAP {'Accept-Encoding': 'gzip'}); COPY (FROM read_csv('https://www.ine.es/jaxiT3/files/t/en/csv_bdsc/15797.csv', delim=';', ignore_errors=True, normalize_names=True, null_padding=True, parallel=True, strict_mode=False, compression='gzip')) TO 'file.parquet' (format parquet, compression 'zstd', parquet_version v2, row_group_size 1048576);"
-      
-      - name: Check File
-        run: ls -lh file.parquet
+      - uses: actions/checkout@v4
+
+      - name: DuckDB Export
+        run: make new-export
+
+
+      # - name: Install DuckDB
+      #   run: |
+      #     curl https://install.duckdb.org | sh
+      # - name: Run Command
+      #   run: |
+      #     /home/runner/.duckdb/cli/latest/duckdb -c "CREATE SECRET http (TYPE http, EXTRA_HTTP_HEADERS MAP {'Accept-Encoding': 'gzip'}); COPY (FROM read_csv('https://www.ine.es/jaxiT3/files/t/en/csv_bdsc/15797.csv', delim=';', ignore_errors=True, normalize_names=True, null_padding=True, parallel=True, strict_mode=False, compression='gzip')) TO 'file.parquet' (format parquet, compression 'zstd', parquet_version v2, row_group_size 1048576);"
+      # - name: Check File
+      #   run: ls -lh file.parquet
