--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,6 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
-# Data directory
-/data/*
-!/data/README.md
+# HuggingFace repository directory
+/ine/*
+!/ine/README.md
