--- a/.github/workflows/datasets.yml
+++ b/.github/workflows/datasets.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Export INE Datasets (Split ${{ matrix.split }})
         run: uv run scripts/02-export-datasets.py --split ${{ matrix.split }} --max-splits ${{ matrix.max_splits }}
 
+      - name: Install Hugging Face CLI
+        run: uv tool install 'huggingface_hub[hf_transfer]'
+
       - name: Upload to Hugging Face
         run: make upload
         env:
