--- a/.github/workflows/metadata.yml
+++ b/.github/workflows/metadata.yml
@@ -3,7 +3,11 @@ name: Export INE Metadata
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 1'
+    - cron: '0 2 * * 1'
+
+concurrency:
+  group: ine-catalog-${{ github.workflow }}
+  cancel-in-progress: false
 
 jobs:
   export-metadata:
@@ -14,12 +18,20 @@ jobs:
       matrix:
         split: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60]
         max_splits: [60]
+      max-parallel: 4
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
+
+      - name: Random start delay
+        shell: bash
+        run: |
+          delay=$((60 + RANDOM % 541))
+          echo "Sleeping for ${delay}s"
+          sleep "$delay"
 
       - name: Export INE Base API
         run: make export-base-api
