--- a/.github/workflows/metadata.yml
+++ b/.github/workflows/metadata.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Random start delay
         shell: bash
         run: |
-          delay=$((60 + RANDOM % 541))
+          delay=$((RANDOM % 3601))
           echo "Sleeping for ${delay}s"
           sleep "$delay"
 
