--- a/.github/workflows/datasets.yml
+++ b/.github/workflows/datasets.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         split: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
         max_splits: [20]
-      max-parallel: 4
+      max-parallel: 1
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
@@ -26,10 +26,11 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v5
 
-      - name: Start delay
+      - name: Start delay (jitter)
         shell: bash
         run: |
-          delay=1200
+          # Jitter, avoids synchronized start times (useful if increasing matrix parallelism).
+          delay=$((RANDOM % 600))
           echo "Sleeping for ${delay}s"
           sleep "$delay"
 
@@ -41,6 +42,13 @@ jobs:
 
       - name: Install Hugging Face CLI
         run: uv tool install 'huggingface_hub[hf_transfer]'
+
+      - name: Upload delay (jitter)
+        shell: bash
+        run: |
+          delay=$((RANDOM % 600))
+          echo "Sleeping for ${delay}s before upload"
+          sleep "$delay"
 
       - name: Upload to Hugging Face
         run: |
